# vision-board

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig
FLASH/: sign_model.tflite  sign_model_uint8.tflite
components/utils/: CMakeLists.txt  http_server.c  http_server.h
main/: CMakeLists.txt  idf_component.yml  main.c  main.cpp  sign_detector.cpp  sign_detector.h  sign_model.cc  sign_model.h  sign_model_uint8.cc
model/: model.ipynb  model.pth
